# Cs61c

courseCode/: malloc_Demo  malloc_Demo.c  pointer  pointer.c
fa20-lab-starter/lab01/: CMakeLists.txt  a.out  eccentric.c  gdb.txt  hello.c  int_hello_input.txt  interactive_hello  ll_cycle.c  no_segfault_ex.c  segfault_ex.c
fa20-lab-starter/lab02/: bit_ops  bit_ops.c  lfsr  lfsr.c  make.txt  vector.c
fa20-proj1-starter/: gameOfLife  gameoflife.c  imageloader.c  imageloader.h  imageloadertester  steganography  steganography.c
